fix(web): fix toolbar text overflow and modal window display in firefox;

--- a/actor-apps/app-web/src/styles/toolbar.scss
+++ b/actor-apps/app-web/src/styles/toolbar.scss
@@ -30,18 +30,9 @@
 
 
   &__peer {
-    //display: inline-block;
-    .avatar {
-      margin: 16px 16px 16px 0;
-    }
-    a > .avatar {
-      cursor: pointer;
-    }
-    &__body {
-      display: inline-block;
+    overflow: hidden;
 
-      vertical-align: middle;
-    }
+    width: 0;
     &__title {
       font-size: 16px;
       font-weight: 500;
